# ChangeLog for dev-ruby/eventmachine
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/eventmachine/ChangeLog,v 1.15 2010/12/27 20:13:48 grobian Exp $

  27 Dec 2010; Fabian Groffen <grobian@gentoo.org>
  eventmachine-0.12.10-r2.ebuild:
  Added Prefix keywords

  08 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  eventmachine-0.12.10-r2.ebuild,
  +files/eventmachine-0.12.10-https-test.patch:
  Fix failing test, bug 299782.

  08 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  -eventmachine-0.12.10.ebuild, -eventmachine-0.12.10-r1.ebuild:
  Remove old versions.

  24 May 2010; Alex Legler <a3li@gentoo.org> eventmachine-0.12.10-r2.ebuild:
  Add REE18 support

  26 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  eventmachine-0.12.10-r2.ebuild, +files/eventmachine-0.12.10-gentoo.patch:
  Add a patch to fix a few more problems in eventmachine, such as bug
  #317281.

*eventmachine-0.12.10-r2 (19 Apr 2010)

  19 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +eventmachine-0.12.10-r2.ebuild:
  Add OpenSSL to dependencies, use a trick yo build in parallel, install
  examples unconditionally, document why jruby is not listed.

*eventmachine-0.12.10-r1 (27 Dec 2009)

  27 Dec 2009; Alex Legler <a3li@gentoo.org>
  +eventmachine-0.12.10-r1.ebuild:
  Revision bump, migration to -fakegem, license update, description update

  09 Dec 2009; Hans de Graaff <graaff@gentoo.org>
  -eventmachine-0.12.8.ebuild:
  Remove old version.

*eventmachine-0.12.10 (19 Nov 2009)

  19 Nov 2009; Hans de Graaff <graaff@gentoo.org>
  +eventmachine-0.12.10.ebuild:
  Version bump.

  22 Aug 2009; Hans de Graaff <graaff@gentoo.org>
  -eventmachine-0.12.6.ebuild:
  Remove old version.

*eventmachine-0.12.8 (10 Jun 2009)

  10 Jun 2009; Hans de Graaff <graaff@gentoo.org>
  +eventmachine-0.12.8.ebuild:
  Version bump.

  14 Apr 2009; Hans de Graaff <graaff@gentoo.org>
  -eventmachine-0.12.0.ebuild, -eventmachine-0.12.2.ebuild: