@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX eventmachine-0.12.10-gentoo.patch 1644 RMD160 9b8cf21be9e4832389fc2a9c473e591b7dfa3827 SHA1 a1d572de43e9a395bf803320c08398b0a1f9ec85 SHA256 11e8bbfa3b776d05d7a64ca729398e35b0083a6738ba3a1a297760090cb3781e
 AUX eventmachine-0.12.10-https-test.patch 816 RMD160 a5525b7e81b5168b1730e9a8151302bb8457e187 SHA1 45106d3789abc8c6c9df5543dfcf3efa3dcc3f21 SHA256 f437298272476b92ccbe13a85d8e995dfba92761922238375b2e945bfdc4aa17
 DIST eventmachine-0.12.10.gem 220672 RMD160 625b4917e84d55fec468a810e9ee0bb5273387f0 SHA1 d9b3ec65e3e94e461ed2d53c01a2b9ab62fe6a07 SHA256 dcbe6193937366b5c6803f8aa09886ff241eeb13b782c1a33ff1a76f99a6ede8
-EBUILD eventmachine-0.12.10-r2.ebuild 1876 RMD160 0180342e46f1fdda7d127fc0562320dc04939fc6 SHA1 a82f7c57852dc1ceb60064484f9e72dbd9c464f8 SHA256 bb8b7768ea930175e0a3017fcee988cc3531350249cbe06b40cc71de855661bc
-MISC ChangeLog 2642 RMD160 d3fa28e192c42a89e2e505127d0878218fdca4ad SHA1 b12f6d3d6cf4f3c4298358df4c5080d0530864b7 SHA256 423fa2102f67a78034ab93ffd22f2062de390ad23f11d71f62cd4934cbbbea13
+EBUILD eventmachine-0.12.10-r2.ebuild 1945 RMD160 7729a5013bbc100b3926132a5b6c05b592b217b0 SHA1 4a64f0860f3606f52a5024df2b1c4ab9a9004404 SHA256 cfc1abbf9734c1b2a976f6c1a62004261b8b61e7ccad40a079257be9b3780a14
+MISC ChangeLog 2829 RMD160 e0ff78ced510e943cdf193a78a9b050cf963867c SHA1 ac95211bd52a182ff26808b699c3e097e763f28f SHA256 8d108626b16dcc3323a6b3203b63141617dee2b70038b296a7e778ccd5eea99a
 MISC metadata.xml 433 RMD160 b5bc8163799d4caf1299a8fc0bf59b65fc8e3856 SHA1 e0ad3695d36bb1dcee0607262d0b1934d6d23cb8 SHA256 cb277b1f4d7367e9b925224bd5e742773d371799cdfc39a3f56b8d568f7d2e27
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk7kbS0ACgkQiIP6VqMIqNcaSgD+Ln1bebwhGfyvYkzSoP66wL/3
+LIrIXstE4V/Kxnp/bcsA/3w4LxJKwm1TZmeBST7InwyFtkLp7rTDg42yO5idj4Fe
+=q2U6
+-----END PGP SIGNATURE-----
