@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/eventmachine
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/eventmachine/ChangeLog,v 1.15 2010/12/27 20:13:48 grobian Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/eventmachine/ChangeLog,v 1.16 2011/12/11 08:43:12 graaff Exp $
+
+  11 Dec 2011; Hans de Graaff <graaff@gentoo.org>
+  eventmachine-0.12.10-r2.ebuild:
+  Run tests directly so that we can ensure the new code is tested. Found while
+  bootstrapping ruby19.
 
   27 Dec 2010; Fabian Groffen <grobian@gentoo.org>
   eventmachine-0.12.10-r2.ebuild:
